# zs-note

./: .gitignore  001-consolidation-summary.md  AGENTS.md  CURRENT_STATUS.md  FIXES-APPLIED.md  LICENSE  README.md  SECURITY.md  TODO.md  VERSION_ANALYSIS.md  audit_report.txt  index.html  open_prs.json  package.json  pnpm-lock.yaml  pr_analysis.txt  pr_and_branch_analysis.md  svelte.config.js  tsconfig.json  vite.config.ts  zarishnote-builder.prompt.yml
.agent/: builder.md
.agent/skills/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  generate-icons.yml  pages.yml
docs/: .gitignore  README.md  TODO.md  ZARISHNOTE-COMPLETE-GUIDE.md  docs.html  index.html  opencode.json  zarishsphere.com.txt
docs/001-concept/: 001-vision.md  002-user-personas.md  003-value-proposition.md  004-glossary.md
docs/002-specifications/001-core-editor/: 001-editor-spec.md  002-file-manager-spec.md  003-znrc-schema.md
docs/002-specifications/002-sandbox-engine/: 001-sandbox-spec.md
docs/002-specifications/003-ai-engine/: 001-ai-chat-spec.md  002-ai-providers.md  003-ai-templates.md
docs/002-specifications/004-ingestion-engine/: 001-ingestion-spec.md  002-format-matrix.md  003-web-converters.md
docs/002-specifications/005-mcp-engine/: 001-mcp-spec.md  002-mcp-marketplace.md  003-knowledge-bases.md
docs/002-specifications/006-voice-engine/: 001-voice-spec.md
docs/002-specifications/007-publish-sync/: 001-publish-spec.md  002-sync-spec.md
docs/002-specifications/008-plugin-system/: 001-plugin-spec.md
docs/003-architecture/: 001-system-architecture.md  002-directory-structure.md  003-tech-stack.md  004-data-model.md
docs/004-security/: 001-threat-model.md  002-security-policy.md  003-sandbox-implementation.md
docs/005-roadmap/: 001-phase-one.md  002-phase-two.md  003-phase-three.md
docs/006-assets/: 001-job-description-rust.md  002-job-description-python.md  003-brand-guidelines.md
docs/007-prototypes/001-zrc-examples/: advanced.znrc  default.znrc
docs/007-prototypes/002-sandbox-hello/: README.md
ingestion/: pyproject.toml
ingestion/src/zarishnote_ingest/: __init__.py  charset.py  cli.py  exceptions.py  markitdown.py  mime_detect.py
ingestion/src/zarishnote_ingest/converters/: __init__.py  base.py  csv_converter.py  docx.py  epub.py  html.py  jupyter.py  pdf.py  pptx.py  rss.py  serp.py  wikipedia.py  xlsx.py  youtube.py
ingestion/tests/: conftest.py  test_converters.py
src/: app.css  app.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs  types.rs
src-tauri/src/ai/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/commands/: ai.rs  config.rs  credentials.rs  editor.rs  git.rs  image_gen.rs  import.rs  ingest.rs  mcp.rs  mod.rs  plugins.rs  publish.rs  sandbox.rs  search.rs  voice.rs
src-tauri/src/git/: commit.rs  history.rs  mod.rs  sync.rs
src-tauri/src/mcp/: marketplace.rs  mod.rs  protocol.rs  router.rs  transport.rs
src-tauri/src/sandbox/: capability.rs  executor.rs  mod.rs  network.rs
src-tauri/src/vector/: index.rs  mod.rs  query.rs
src-tauri/tests/: README.md  integration.rs
src-tauri/tests/integration/: test_config.rs  test_editor.rs  test_git_engine.rs  test_mcp_protocol.rs  test_sandbox_executor.rs  test_types.rs  test_vector_store.rs
src/lib/: types.ts
src/lib/a11y/: Announcements.svelte  SkipLink.svelte  announce.ts
src/lib/commands/: ai.test.ts  ai.ts  credentials.ts  editor.test.ts  editor.ts  import.ts  plugins.ts  sandbox.ts
src/lib/components/: AIPanel.svelte  APIKeyManager.svelte  App.svelte  ContextInspector.svelte  Editor.svelte  FileTree.svelte  FormatToolbar.svelte  HistoryBrowser.svelte  ImageGenerationDialog.svelte  ImportDialog.svelte  MCPManager.svelte  MarketplaceBrowser.svelte  McpConfirmationDialog.svelte  MilkdownEditor.svelte  Modal.svelte  PluginManager.svelte  PublishPanel.svelte  Settings.svelte  Sidebar.svelte  SourceEditor.svelte  StatusBar.svelte  TabBar.svelte  TemplatePicker.svelte  VoiceRecorder.svelte
src/lib/i18n/: LocaleSwitcher.svelte  index.ts  translations.ts
src/lib/milkdown/: image-handler.ts  mermaid-plugin.ts  milkdown.d.ts  setup.ts  table-plugin.ts
src/lib/stores/: ai.svelte.ts  config.svelte.ts  config.test.ts  editor.svelte.ts  files.svelte.ts  mcp.svelte.ts  plugins.svelte.ts
src/lib/utils/: vaultPath.ts
zs_note_interface/: extracted_text_from_https_github.com_zarishsphere_zs_note.md
zs_note_interface/ai_markdown_editor/: code.html
zs_note_interface/note_vault/: code.html
zs_note_interface/sandboxed_ai_assistant/: code.html
zs_note_interface/zarishnote/: DESIGN.md
zs_note_interface/zarishnote_github_promo/: code.html
