[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zarishnote-ingest"
version = "0.1.0"
description = "Document to Markdown ingestion engine for ZarishNote"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "markitdown[all]",
    "defusedxml",
    "charset-normalizer",
    "markdownify",
    "requests",
    "beautifulsoup4",
    "feedparser",
]

[project.optional-dependencies]
pdf = ["pdfminer.six", "pdfplumber"]
docx = ["mammoth"]
pptx = ["python-pptx"]
xlsx = ["pandas", "openpyxl"]
epub = ["ebooklib"]
youtube = ["youtube-transcript-api"]
all = [
    "zarishnote-ingest[pdf]",
    "zarishnote-ingest[docx]",
    "zarishnote-ingest[pptx]",
    "zarishnote-ingest[xlsx]",
    "zarishnote-ingest[epub]",
    "zarishnote-ingest[youtube]",
]

[project.urls]
homepage = "https://github.com/zarishsphere/zs-note"
repository = "https://github.com/zarishsphere/zs-note"

[project.scripts]
zarishnote-ingest = "zarishnote_ingest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zarishnote_ingest"]
