[package]
name = "zs-note"
version = "0.1.0"
description = "ZarishNote — a modern note-taking application with sandboxed code execution"
authors = ["Mohammad Ariful Islam <zarishsphere@gmail.com>"]
edition = "2024"

[lib]
name = "zs_note_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "zs-note"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
wasmtime = "25"
wasmtime-wasi = "25"
wasmtime-wasi-http = "25"
git2 = "0.19"
lancedb = "0.14"
fastembed-rs = "4"
whisper-rs = "0.13"
jsonrpsee = { version = "0.24", features = ["server", "client"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob-match = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
